--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -120,7 +120,7 @@ header .column span {
     font-size: 1.13rem;
 }
 
-.piano-keys .white:active {
+.piano-keys .white.active {
     box-shadow: inset -5px 5px 20px rgba(0,0,0, 0.2);
     background: linear-gradient( to bottom
         #fff 0%,
@@ -128,7 +128,7 @@ header .column span {
     );
 }
 
-.piano-keys .black:active {
+.piano-keys .black.active {
     box-shadow: inset -5px 5px 20px rgba(255,255,255, 0.1);
     background: linear-gradient( to bottom
         #000,
