--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,7 @@ body {
     border-radius: 20px;
     padding: 35px 40px;
     background-color: #000;
+    box-shadow: 14px 20px 10px rgba(0,0,0, 0.4);
 }
 
 .container header {
